Update metal icons

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             </button>
             <button onclick="selectMetal('platinum')" id="tab-platinum" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
                 <div class="text-center">
-                    <span class="text-lg">💎</span>
+                    <span class="text-lg">⚪</span>
                     <div class="text-xs font-medium mt-1">Platinum</div>
                 </div>
             </button>
             <button onclick="selectMetal('palladium')" id="tab-palladium" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
                 <div class="text-center">
-                    <span class="text-lg">⚪</span>
+                    <span class="text-lg">🔘</span>
                     <div class="text-xs font-medium mt-1">Palladium</div>
                 </div>
             </button>
