--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metal Prices - Live Gold, Silver & Platinum</title>
-    <meta name="description" content="Live precious metal prices - Gold, Silver, Platinum. Real-time spot prices, charts, and Shanghai silver rates.">
+    <title>SilverPrice.win - Live Silver, Gold & Metal Prices</title>
+    <meta name="description" content="Live precious metal prices - Silver, Gold, Platinum, Palladium, Copper. Real-time spot prices, charts, and Shanghai silver premium.">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lightweight-charts@4.1.0/dist/lightweight-charts.standalone.production.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,11 +43,11 @@
     <header class="border-b border-slate-700/50">
         <div class="max-w-2xl mx-auto px-4 py-3 flex items-center justify-between">
             <div class="flex items-center gap-2">
-                <div class="w-8 h-8 rounded-lg bg-gradient-to-br from-yellow-400 to-yellow-600 flex items-center justify-center">
-                    <span class="text-sm">💰</span>
+                <div class="w-8 h-8 rounded-lg bg-gradient-to-br from-slate-300 to-slate-500 flex items-center justify-center">
+                    <span class="text-sm">🥈</span>
                 </div>
                 <div>
-                    <h1 class="text-lg font-bold">MetalPrices</h1>
+                    <h1 class="text-lg font-bold">SilverPrice<span class="text-slate-400">.win</span></h1>
                 </div>
             </div>
             <div class="flex items-center gap-2">
