--- a/index.html
+++ b/index.html
@@ -47,12 +47,8 @@
     <header class="border-b border-slate-700/50">
         <div class="max-w-2xl mx-auto px-4 py-3 flex items-center justify-between">
             <div class="flex items-center gap-2">
-                <div class="w-8 h-8 rounded-lg bg-gradient-to-br from-slate-300 to-slate-500 flex items-center justify-center">
-                    <span class="text-sm">🪙</span>
-                </div>
-                <div>
-                    <h1 class="text-lg font-bold">SilverPrice<span class="text-slate-400">.win</span></h1>
-                </div>
+                <span class="text-2xl">🥈</span>
+                <h1 class="text-lg font-bold">SilverPrice<span class="text-slate-400">.win</span></h1>
             </div>
             <div class="flex items-center gap-2">
                 <button onclick="toggleTheme()" id="themeToggle" class="p-2 rounded-lg bg-slate-800 hover:bg-slate-700 text-lg">🌙</button>
@@ -70,13 +66,13 @@
         <div class="grid grid-cols-4 gap-2 mb-4">
             <button onclick="selectMetal('gold')" id="tab-gold" class="metal-tab py-2 px-2 rounded-xl bg-yellow-500/20 border-2 border-yellow-500/50 active">
                 <div class="text-center">
-                    <span class="text-lg" style="filter: sepia(1) saturate(3) hue-rotate(15deg) brightness(1.1);">🪙</span>
+                    <span class="text-lg">🥇</span>
                     <div class="text-xs font-medium mt-1">Gold</div>
                 </div>
             </button>
             <button onclick="selectMetal('silver')" id="tab-silver" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
                 <div class="text-center">
-                    <span class="text-lg" style="filter: grayscale(1) brightness(1.5);">🪙</span>
+                    <span class="text-lg">🥈</span>
                     <div class="text-xs font-medium mt-1">Silver</div>
                 </div>
             </button>
