--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header class="border-b border-slate-700/50">
         <div class="max-w-2xl mx-auto px-4 py-3 flex items-center justify-between">
             <div class="flex items-center gap-2">
-                <span class="text-2xl">🥈</span>
+                <svg width="28" height="20" viewBox="0 0 28 20" fill="none"><rect x="2" y="4" width="24" height="12" rx="1" fill="#C0C0C0"/><rect x="4" y="6" width="20" height="8" rx="1" fill="#E8E8E8"/><rect x="6" y="8" width="16" height="4" fill="#F5F5F5"/></svg>
                 <h1 class="text-lg font-bold">SilverPrice<span class="text-slate-400">.win</span></h1>
             </div>
             <div class="flex items-center gap-2">
@@ -65,26 +65,26 @@
         <!-- Metal Selector Tabs -->
         <div class="grid grid-cols-4 gap-2 mb-4">
             <button onclick="selectMetal('gold')" id="tab-gold" class="metal-tab py-2 px-2 rounded-xl bg-yellow-500/20 border-2 border-yellow-500/50 active">
-                <div class="text-center">
-                    <span class="text-lg">🥇</span>
+                <div class="text-center flex flex-col items-center">
+                    <svg width="24" height="16" viewBox="0 0 24 16"><rect x="1" y="3" width="22" height="10" rx="1" fill="#FFD700"/><rect x="3" y="5" width="18" height="6" rx="1" fill="#FFC107"/><rect x="5" y="7" width="14" height="2" fill="#FFEB3B"/></svg>
                     <div class="text-xs font-medium mt-1">Gold</div>
                 </div>
             </button>
             <button onclick="selectMetal('silver')" id="tab-silver" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
-                <div class="text-center">
-                    <span class="text-lg">🥈</span>
+                <div class="text-center flex flex-col items-center">
+                    <svg width="24" height="16" viewBox="0 0 24 16"><rect x="1" y="3" width="22" height="10" rx="1" fill="#A0A0A0"/><rect x="3" y="5" width="18" height="6" rx="1" fill="#C0C0C0"/><rect x="5" y="7" width="14" height="2" fill="#E8E8E8"/></svg>
                     <div class="text-xs font-medium mt-1">Silver</div>
                 </div>
             </button>
             <button onclick="selectMetal('platinum')" id="tab-platinum" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
-                <div class="text-center">
-                    <span class="text-lg" style="filter: grayscale(1) brightness(1.3) contrast(0.9);">🪙</span>
+                <div class="text-center flex flex-col items-center">
+                    <svg width="24" height="16" viewBox="0 0 24 16"><rect x="1" y="3" width="22" height="10" rx="1" fill="#B8C5D0"/><rect x="3" y="5" width="18" height="6" rx="1" fill="#D4E1EB"/><rect x="5" y="7" width="14" height="2" fill="#EDF4F8"/></svg>
                     <div class="text-xs font-medium mt-1">Platinum</div>
                 </div>
             </button>
             <button onclick="selectMetal('palladium')" id="tab-palladium" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
-                <div class="text-center">
-                    <span class="text-lg" style="filter: grayscale(1) brightness(1.1) sepia(0.2);">🪙</span>
+                <div class="text-center flex flex-col items-center">
+                    <svg width="24" height="16" viewBox="0 0 24 16"><rect x="1" y="3" width="22" height="10" rx="1" fill="#8E9BA5"/><rect x="3" y="5" width="18" height="6" rx="1" fill="#B0BBC4"/><rect x="5" y="7" width="14" height="2" fill="#D0D8DE"/></svg>
                     <div class="text-xs font-medium mt-1">Palladium</div>
                 </div>
             </button>
