--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             </button>
             <button onclick="selectMetal('platinum')" id="tab-platinum" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
                 <div class="text-center flex flex-col items-center">
-                    <svg width="24" height="16" viewBox="0 0 24 16"><rect x="1" y="3" width="22" height="10" rx="1" fill="#B8C5D0"/><rect x="3" y="5" width="18" height="6" rx="1" fill="#D4E1EB"/><rect x="5" y="7" width="14" height="2" fill="#EDF4F8"/></svg>
+                    <svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="9" fill="#B8C5D0" stroke="#9AAAB8" stroke-width="1"/><circle cx="10" cy="10" r="6" fill="#D4E1EB"/><circle cx="10" cy="10" r="3" fill="#EDF4F8"/></svg>
                     <div class="text-xs font-medium mt-1">Platinum</div>
                 </div>
             </button>
             <button onclick="selectMetal('palladium')" id="tab-palladium" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
                 <div class="text-center flex flex-col items-center">
-                    <svg width="24" height="16" viewBox="0 0 24 16"><rect x="1" y="3" width="22" height="10" rx="1" fill="#8E9BA5"/><rect x="3" y="5" width="18" height="6" rx="1" fill="#B0BBC4"/><rect x="5" y="7" width="14" height="2" fill="#D0D8DE"/></svg>
+                    <svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="9" fill="#8E9BA5" stroke="#7A8890" stroke-width="1"/><circle cx="10" cy="10" r="6" fill="#B0BBC4"/><circle cx="10" cy="10" r="3" fill="#D0D8DE"/></svg>
                     <div class="text-xs font-medium mt-1">Palladium</div>
                 </div>
             </button>
