--- a/index.html
+++ b/index.html
@@ -90,6 +90,23 @@
             </button>
         </div>
 
+        <!-- Price Card -->
+        <div class="metal-card rounded-2xl border border-slate-700/50 p-4 mb-4">
+            <div class="flex items-center justify-between">
+                <div>
+                    <h2 id="metalName" class="text-lg font-bold">Gold</h2>
+                    <p id="metalCode" class="text-xs text-slate-400">XAU/USD</p>
+                </div>
+                <div class="text-right">
+                    <div id="metalPrice" class="text-2xl font-bold">--</div>
+                    <div class="flex items-center justify-end gap-2">
+                        <span id="metalChange" class="text-sm">--</span>
+                        <span id="metalChangePct" class="text-xs px-2 py-0.5 rounded-full bg-slate-700">--</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- TradingView Chart -->
         <div class="metal-card rounded-2xl border border-slate-700/50 overflow-hidden mb-4">
             <div id="tradingview-widget" style="height: 400px; width: 100%;"></div>
