Add blog section with first article

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 <svg width="28" height="20" viewBox="0 0 28 20" fill="none"><rect x="2" y="4" width="24" height="12" rx="1" fill="#C0C0C0"/><rect x="4" y="6" width="20" height="8" rx="1" fill="#E8E8E8"/><rect x="6" y="8" width="16" height="4" fill="#F5F5F5"/></svg>
                 <h1 class="text-lg font-bold">SilverPrice<span class="text-slate-400">.win</span></h1>
             </div>
-            <div class="flex items-center gap-2">
+            <div class="flex items-center gap-3">
+                <a href="/blog.html" class="text-sm text-slate-400 hover:text-white">Blog</a>
                 <button onclick="toggleTheme()" id="themeToggle" class="p-2 rounded-lg bg-slate-800 hover:bg-slate-700 text-lg">🌙</button>
                 <select id="currency" class="bg-slate-800 border border-slate-700 rounded-lg px-2 py-1 text-sm">
                     <option value="USD">USD</option>
