Fix India duty rate: 10.5% (7.5% duty + 3% GST) per metalcharts.org

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                 
                 <div class="flex justify-center mb-3">
                     <div class="bg-orange-500/20 border border-orange-500/30 rounded-full px-3 py-1 text-sm">
-                        <span class="text-orange-400 font-bold" id="indiaPremium">+18%</span>
-                        <span class="text-slate-400" data-i18n="includesDuty">includes duty + GST</span>
+                        <span class="text-orange-400 font-bold" id="indiaPremium">+10.5%</span>
+                        <span class="text-slate-400" data-i18n="includesDuty">includes 7.5% duty + 3% GST</span>
                     </div>
                 </div>
                 
