Add Chinese language + CNY currency

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <button onclick="toggleTheme()" id="themeToggle" class="p-1.5 rounded-lg bg-slate-800 hover:bg-slate-700 text-sm">🌙</button>
                 <select id="language" class="bg-slate-800 border border-slate-700 rounded-lg px-1.5 py-1 text-xs">
                     <option value="en">🇬🇧 EN</option>
+                    <option value="zh">🇨🇳 中文</option>
                     <option value="hi">🇮🇳 हिंदी</option>
                     <option value="ms">🇲🇾 BM</option>
                     <option value="it">🇮🇹 IT</option>
@@ -73,6 +74,7 @@
                 <select id="currency" class="bg-slate-800 border border-slate-700 rounded-lg px-1.5 py-1 text-xs">
                     <option value="USD">USD</option>
                     <option value="EUR">EUR</option>
+                    <option value="CNY">CNY</option>
                     <option value="INR">INR</option>
                     <option value="MYR">MYR</option>
                     <option value="AUD">AUD</option>
