--- a/it/index.html
+++ b/it/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DHCC15D81N"></script>
@@ -19,8 +19,8 @@
     <link rel="alternate" hreflang="de" href="https://silverprice.win/de/" />
     <link rel="alternate" hreflang="es" href="https://silverprice.win/es/" />
     <link rel="alternate" hreflang="it" href="https://silverprice.win/it/" />
-    <title>SilverPrice.win - Live Silver, Gold & Metal Prices</title>
-    <meta name="description" content="Live precious metal prices - Silver, Gold, Platinum, Palladium. Real-time spot prices, charts, and Shanghai silver premium.">
+    <title>SilverPrice.win - Prezzi Argento, Oro e Metalli in Tempo Reale</title>
+    <meta name="description" content="Prezzi metalli preziosi in tempo reale - Argento, Oro, Platino, Palladio. Prezzi spot, grafici e premio argento Shanghai.">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect x='4' y='8' width='24' height='16' rx='2' fill='%23C0C0C0'/%3E%3Crect x='6' y='10' width='20' height='12' rx='1' fill='%23E8E8E8'/%3E%3Crect x='8' y='13' width='16' height='6' fill='%23F5F5F5'/%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- TradingView Widget -->
@@ -72,16 +72,16 @@
                 <button onclick="toggleTheme()" id="themeToggle" class="p-1.5 rounded-lg bg-slate-800 hover:bg-slate-700 text-sm">🌙</button>
                 <div class="lang-dropdown relative">
                     <button id="langBtn" class="bg-slate-800 border border-slate-700 rounded-lg px-2 py-1 text-xs flex items-center gap-1">
-                        🇬🇧 EN <span class="text-xs">▼</span>
+                        🇮🇹 IT <span class="text-xs">▼</span>
                     </button>
                     <div id="langMenu" class="hidden absolute right-0 mt-1 bg-slate-800 border border-slate-700 rounded-lg py-1 z-50 min-w-[80px]">
-                        <a href="/" class="block px-3 py-1 text-xs bg-slate-700">🇬🇧 EN</a>
+                        <a href="/" class="block px-3 py-1 text-xs hover:bg-slate-700">🇬🇧 EN</a>
                         <a href="/zh/" class="block px-3 py-1 text-xs hover:bg-slate-700">🇨🇳 ZH</a>
                         <a href="/hi/" class="block px-3 py-1 text-xs hover:bg-slate-700">🇮🇳 HI</a>
                         <a href="/ms/" class="block px-3 py-1 text-xs hover:bg-slate-700">🇲🇾 MS</a>
                         <a href="/de/" class="block px-3 py-1 text-xs hover:bg-slate-700">🇩🇪 DE</a>
                         <a href="/es/" class="block px-3 py-1 text-xs hover:bg-slate-700">🇪🇸 ES</a>
-                        <a href="/it/" class="block px-3 py-1 text-xs hover:bg-slate-700">🇮🇹 IT</a>
+                        <a href="/it/" class="block px-3 py-1 text-xs bg-slate-700">🇮🇹 IT</a>
                     </div>
                 </div>
                 <select id="currency" class="bg-slate-800 border border-slate-700 rounded-lg px-1.5 py-1 text-xs">
@@ -278,7 +278,7 @@
         </div>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="../app.js"></script>
 
     <script>
         // Language dropdown toggle
