Add cache-busting to app.js

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </footer>
 
     <script>window.pageLang = 'en';</script>
-    <script src="app.js"></script>
+    <script src="app.js?v=1770934660"></script>
 
     <script>
         // Language dropdown toggle
