Add SEO: canonical URLs, Schema.org, Open Graph, Twitter cards

--- a/it/index.html
+++ b/it/index.html
@@ -25,6 +25,8 @@
     <link rel="alternate" hreflang="ja" href="https://silverprice.win/ja/" />
     <link rel="alternate" hreflang="ru" href="https://silverprice.win/ru/" />
     <title>SilverPrice.win - Live Silver, Gold & Metal Prices</title>
+    <link rel="canonical" href="https://silverprice.win/it/">
+    <meta property="og:url" content="https://silverprice.win/it/">
     <meta name="description" content="Live precious metal prices - Silver, Gold, Platinum, Palladium. Real-time spot prices, charts, and Shanghai silver premium.">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect x='4' y='8' width='24' height='16' rx='2' fill='%23C0C0C0'/%3E%3Crect x='6' y='10' width='20' height='12' rx='1' fill='%23E8E8E8'/%3E%3Crect x='8' y='13' width='16' height='6' fill='%23F5F5F5'/%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
