--- a/pt/index.html
+++ b/pt/index.html
@@ -112,13 +112,13 @@
     <main class="max-w-2xl mx-auto px-4 py-4">
         <!-- Metal Selector Tabs -->
         <div class="grid grid-cols-4 gap-2 mb-4">
-            <button onclick="selectMetal('gold')" id="tab-gold" class="metal-tab py-2 px-2 rounded-xl bg-yellow-500/20 border-2 border-yellow-500/50 active">
+            <button onclick="selectMetal('gold')" id="tab-gold" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
                 <div class="text-center flex flex-col items-center">
                     <svg width="24" height="16" viewBox="0 0 24 16"><rect x="1" y="3" width="22" height="10" rx="1" fill="#FFD700"/><rect x="3" y="5" width="18" height="6" rx="1" fill="#FFC107"/><rect x="5" y="7" width="14" height="2" fill="#FFEB3B"/></svg>
                     <div class="text-xs font-medium mt-1">Gold</div>
                 </div>
             </button>
-            <button onclick="selectMetal('silver')" id="tab-silver" class="metal-tab py-2 px-2 rounded-xl bg-slate-700/50 border-2 border-transparent">
+            <button onclick="selectMetal('silver')" id="tab-silver" class="metal-tab py-2 px-2 rounded-xl bg-slate-400/20 border-2 border-slate-400/50 active">
                 <div class="text-center flex flex-col items-center">
                     <svg width="24" height="16" viewBox="0 0 24 16"><rect x="1" y="3" width="22" height="10" rx="1" fill="#A0A0A0"/><rect x="3" y="5" width="18" height="6" rx="1" fill="#C0C0C0"/><rect x="5" y="7" width="14" height="2" fill="#E8E8E8"/></svg>
                     <div class="text-xs font-medium mt-1">Silver</div>
